--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -1,14 +1,3 @@
-$col: #595830;
-
-body {
-  color: $col;
-  border: 255px;
-  columns: 300px 2;
-}
-
-.box {
-  a {
-    display: block;
-    padding: 10px;
-  }
-}
+@import "normalize.css";
+@import "base/_global";
+@import "modules/_large-hero";
