--- a/gulp/templates/sprite.css
+++ b/gulp/templates/sprite.css
@@ -5,6 +5,10 @@
     .icon {
       background-image: url('/assets/images/sprites/css/{{{sprite}}}');
     }
+
+    .no-svg .icon {
+      background-image: url('/assets/images/sprites/css/{{{sprite}}}');
+    }
   {{/first}}
 
   .icon--{{base}} {
