completed the support for SVG icons in legacy browsers

--- a/gulp/templates/sprite.css
+++ b/gulp/templates/sprite.css
@@ -7,7 +7,7 @@
     }
 
     .no-svg .icon {
-      background-image: url('/assets/images/sprites/css/{{{sprite}}}');
+      background-image: url('/assets/images/sprites/css/{{#replaceSvgWithPng}}{{{sprite}}}{{/replaceSvgWithPng}}');
     }
   {{/first}}
 
