--- a/docs/assets/images/sprites/css/sprite.css
+++ b/docs/assets/images/sprites/css/sprite.css
@@ -1,11 +1,11 @@
 /* do not edit modules/_sprite directly as it is generated automatically by gulp. instead edit gulp/templates/sprite.css */
 
     .icon {
-      background-image: url('/assets/images/sprites/css/sprite-e79e95cc.svg');
+      background-image: url('../../assets/images/sprites/css/sprite-e79e95cc.svg');
     }
 
     .no-svg .icon {
-      background-image: url('/assets/images/sprites/css/sprite-e79e95cc.png');
+      background-image: url('../../assets/images/sprites/css/sprite-e79e95cc.png');
     }
 
   .icon--clear-view-escapes {
